# N-Body-barne-s-hut-basic-

./: .gitignore  CMakeLists.txt  README.md  nbody_barneshut.cpp  nbody_simulator.cpp  nbody_visual.cpp
Docs/: logs.md
src/: main.cpp
